--- a/src/main/resources/templates/mypage/delete.html
+++ b/src/main/resources/templates/mypage/delete.html
@@ -19,7 +19,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!--Ohter CSS-->
     <link rel = "stylesheet" th:href="@{/css/tableCollapse.css}">
-
+    <style>
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
 <body class = "">
 <!-- Top -->
@@ -29,83 +34,95 @@
     <section>
         <div class="container">
             <div class="row mb-4 mt-4">
-                <h1 class="text-center fw-bold">마이 페이지</h1>
+                <h1 class="text-center fw-bold">회원탈퇴</h1>
             </div>
             <div class="row justify-content-start">
                 <span class="col-lg-1"></span>
                 <div class="col-lg-2">
                     <div class="list-group">
-                        <a th:href="@{/mypage}" class="list-group-item list-group-item-action">개인 정보 수정</a>
-                        <a th:href="@{/mypage/changePw}" class="list-group-item list-group-item-action">비밀번호 변경</a>
-                        <a th:href="@{/mypage/delete}" class="list-group-item list-group-item-action active">회원 탈퇴</a>
+                        <a th:href="@{/mypage}" class="list-group-item list-group-item-action">개인정보수정</a>
+                        <a th:href="@{/mypage/changePw}" class="list-group-item list-group-item-action">비밀번호변경</a>
+                        <a th:href="@{/mypage/delete}" class="list-group-item list-group-item-action active">회원탈퇴</a>
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
                     <div class="card">
                         <div class="card-body">
-                            <h3 class="card-title text-center fw-bold">회원 탈퇴</h3>
-                            <hr>
-                            <form method="post" th:action>
 
+                            <div class="box-guide">
+                                <ul class="list list1-gray">
+                                    <li>회원정보삭제 : 세종대병원 사이트에서 회원탈퇴가 되어 회원정보가 삭제됩니다.</li>
+                                    <li>세종대병원 사이트의 병원서비스를 이용하실 수 없습니다.</li>
+                                </ul>
+                            </div>
+                            <hr>
+                            <form method="post" th:action th:object="${form}">
+                                <!-- 글로벌 오류 메세지 -->
+                                <div th:if="${#fields.hasGlobalErrors()}" class="text-center mb-4">
+                                    <img th:src="@{/assets/images/warning.png}">
+                                    <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+                                    th:text="${err}">전체 오류 메시지</p>
+                                </div>
                                 <!--마이페이지 수정 테이블-->
                                 <table class="table table-bordered">
                                     <thead></thead>
                                     <tbody>
-                                        <!--참고 vertical-align: middle 상하중앙정렬 height 표 폭 조절-->
-                                        <tr>
-                                            <td class="table-light fw-bold" style="vertical-align: middle;">성명</td>
-                                            <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;"
-                                            th:text="|${loginMember.info.name} (${loginMember.info.rrn.substring(0, 6)} ${loginMember.info.sex.description})|">
-                                                sdd1234
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="table-light fw-bold" style="vertical-align: middle;">아이디</td>
-                                            <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;"
-                                                th:text="${loginMember.loginId}">
-                                                아이디
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="table-light fw-bold" style="vertical-align: middle;">현재 비밀번호</td>
-                                            <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;">
-                                                <input th:field="${form.password}" type = "password" class="form-control" id = "pwd" style="width: 200px;"/>
-                                            </td>
-                                        </tr>
+                                    <!--참고 vertical-align: middle 상하중앙정렬 height 표 폭 조절-->
+                                    <tr>
+                                        <td class="table-light fw-bold" style="vertical-align: middle;">성명</td>
+                                        <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;"
+                                            th:text="|${loginMember.info.name} (${loginMember.info.rrn.substring(0, 2)}.${loginMember.info.rrn.substring(2, 4)}.${loginMember.info.rrn.substring(4, 6)} ${loginMember.info.sex.description})|">
+                                            이름 (YY.MM.DD 성별)
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="table-light fw-bold" style="vertical-align: middle;">아이디</td>
+                                        <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;"
+                                            th:text="${loginMember.loginId}">
+                                            아이디
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td class="table-light fw-bold" style="vertical-align: middle;">현재 비밀번호</td>
+                                        <td style="width: 430px; height: 60px; vertical-align: middle; padding: 2%;">
+                                            <input th:field="*{password}" type = "password" class="form-control" id = "pwd" style="width: 200px;"/>
+                                        </td>
+                                    </tr>
                                     </tbody>
                                     <!--하단에 굵은 줄-->
-                                    <tfoot><td style="padding:0%"></td></tfoot>          
+                                    <tfoot><td style="padding:0%"></td></tfoot>
                                 </table>
                                 <!--테이블 end-->
 
                                 <div class="text-center mb-4">
                                     <button class="btn btn-lg btn-primary btn-block text-uppercase"
-                                        type="button" data-bs-toggle="modal" data-bs-target="#baseModal">회원 탈퇴</button>
+                                            type="button" data-bs-toggle="modal" data-bs-target="#baseModal">회원 탈퇴</button>
                                 </div>
 
                                 <!--모달 (회원 탈퇴시 경고창)-->
                                 <div class="modal fade" id="baseModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
-                                      <div class="modal-content">
-                                        <div class="modal-header">
-                                          <h5 class="modal-title fw-bold" id="exampleModalLabel">회원 탈퇴</h5>
-                                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body text-center">
-                                          정말 회원 탈퇴를 하시겠습니까? <br>
-                                            탈퇴 후에는 신상정보가 모두 삭제되며, 등록하신 데이터를 다시 확인하실 수 없습니다.
-                                        </div>
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5 class="modal-title fw-bold" id="exampleModalLabel">회원 탈퇴</h5>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body text-center">
+                                                정말 회원 탈퇴를 하시겠습니까? <br>
+                                                탈퇴 후에는 신상정보가 모두 삭제되며, 등록하신 데이터를 다시 확인하실 수 없습니다.
+                                            </div>
 
-                                        <!--회원 탈퇴 진행 버튼-->
-                                        <div class="modal-footer">
-                                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="location.href ='userWithdraw.html'">돌아가기</button>
-                                          <button type="submit" class="btn btn-primary" >확인</button>
+                                            <!--회원 탈퇴 진행 버튼-->
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" >취소</button>
+                                                <button type="submit" class="btn btn-primary" >확인</button>
+                                            </div>
+
                                         </div>
-                                        
-                                      </div>
                                     </div>
-                                  </div>
+                                </div>
                             </form>
+                            <br/>
                         </div>
                     </div>
                 </div>
